// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`baseline snapshots (P-B3.2 guard) > collapsed error with long content (summary truncated) 1`] = `
<div
  class="rounded-lg border my-1 overflow-hidden border-[#302a2a] bg-[#1f1b1b]"
  data-testid="tool-result-block"
>
  <button
    aria-expanded="false"
    class="w-full flex items-center gap-2 px-3 py-1.5 cursor-pointer text-left text-xs text-[#c77] hover:bg-[#251f1f]"
    data-testid="tool-result-header"
  >
    <svg
      fill="currentColor"
      height="10"
      viewBox="0 0 256 256"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <svg
      fill="currentColor"
      height="14"
      viewBox="0 0 256 256"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      error: error: error: error: error: error: error: error: error: error: error: err...
    </span>
  </button>
</div>
`;

exports[`baseline snapshots (P-B3.2 guard) > collapsed ok 1`] = `
<div
  class="rounded-lg border my-1 overflow-hidden border-[#2a302a] bg-[#1b1f1b]"
  data-testid="tool-result-block"
>
  <button
    aria-expanded="false"
    class="w-full flex items-center gap-2 px-3 py-1.5 cursor-pointer text-left text-xs text-[#8bc] hover:bg-[#1f251f]"
    data-testid="tool-result-header"
  >
    <svg
      fill="currentColor"
      height="10"
      viewBox="0 0 256 256"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M181.66,133.66l-80,80a8,8,0,0,1-11.32-11.32L164.69,128,90.34,53.66a8,8,0,0,1,11.32-11.32l80,80A8,8,0,0,1,181.66,133.66Z"
      />
    </svg>
    <svg
      fill="currentColor"
      height="14"
      viewBox="0 0 256 256"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.66,98.34a8,8,0,0,1,0,11.32l-56,56a8,8,0,0,1-11.32,0l-24-24a8,8,0,0,1,11.32-11.32L112,148.69l50.34-50.35A8,8,0,0,1,173.66,98.34ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      line one
line two
    </span>
  </button>
</div>
`;

exports[`baseline snapshots (P-B3.2 guard) > expanded error 1`] = `
<div
  class="rounded-lg border my-1 overflow-hidden border-[#302a2a] bg-[#1f1b1b]"
  data-testid="tool-result-block"
>
  <button
    aria-expanded="true"
    class="w-full flex items-center gap-2 px-3 py-1.5 cursor-pointer text-left text-xs text-[#c77] hover:bg-[#251f1f]"
    data-testid="tool-result-header"
  >
    <svg
      fill="currentColor"
      height="10"
      viewBox="0 0 256 256"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
      />
    </svg>
    <svg
      fill="currentColor"
      height="14"
      viewBox="0 0 256 256"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      line one
line two
    </span>
  </button>
  <div
    class="border-t px-3 py-2 text-xs font-mono whitespace-pre-wrap max-h-60 overflow-auto border-[#302a2a] text-[#c99]"
    data-testid="tool-result-content"
  >
    line one
line two
  </div>
</div>
`;

exports[`baseline snapshots (P-B3.2 guard) > expanded ok 1`] = `
<div
  class="rounded-lg border my-1 overflow-hidden border-[#2a302a] bg-[#1b1f1b]"
  data-testid="tool-result-block"
>
  <button
    aria-expanded="true"
    class="w-full flex items-center gap-2 px-3 py-1.5 cursor-pointer text-left text-xs text-[#8bc] hover:bg-[#1f251f]"
    data-testid="tool-result-header"
  >
    <svg
      fill="currentColor"
      height="10"
      viewBox="0 0 256 256"
      width="10"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M213.66,101.66l-80,80a8,8,0,0,1-11.32,0l-80-80A8,8,0,0,1,53.66,90.34L128,164.69l74.34-74.35a8,8,0,0,1,11.32,11.32Z"
      />
    </svg>
    <svg
      fill="currentColor"
      height="14"
      viewBox="0 0 256 256"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M173.66,98.34a8,8,0,0,1,0,11.32l-56,56a8,8,0,0,1-11.32,0l-24-24a8,8,0,0,1,11.32-11.32L112,148.69l50.34-50.35A8,8,0,0,1,173.66,98.34ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
      />
    </svg>
    <span
      class="truncate flex-1"
    >
      line one
line two
    </span>
  </button>
  <div
    class="border-t px-3 py-2 text-xs font-mono whitespace-pre-wrap max-h-60 overflow-auto border-[#2a302a] text-[#9b9]"
    data-testid="tool-result-content"
  >
    line one
line two
  </div>
</div>
`;
